--- a/Src/Avivatec.Padrao.Api/Avivatec.Padrao.Api.csproj
+++ b/Src/Avivatec.Padrao.Api/Avivatec.Padrao.Api.csproj
@@ -5,14 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="8.6.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Avivatec.Padrao.Application.Cqrs\Avivatec.Padrao.Application.Cqrs.csproj" />
     <ProjectReference Include="..\Avivatec.Padrao.Application\Avivatec.Padrao.Application.csproj" />
     <ProjectReference Include="..\Avivatec.Padrao.Helpers\Avivatec.Padrao.Helpers.csproj" />
   </ItemGroup>
